--- a/aws/aws-ec2-networking.yaml
+++ b/aws/aws-ec2-networking.yaml
@@ -41,6 +41,7 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName}-public-a"
       VpcId: !Ref VPC
+      MapPublicIpOnLaunch: true
 
   PublicSubnetARouteTableAssociation:
     Type: "AWS::EC2::SubnetRouteTableAssociation"
@@ -59,6 +60,7 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName}-public-b"
       VpcId: !Ref VPC
+      MapPublicIpOnLaunch: true
 
   PublicSubnetBRouteTableAssociation:
     Type: "AWS::EC2::SubnetRouteTableAssociation"
