Update aws-ec2-networking.yaml configure EnableDnsHostnames to true and EnableDnsSupport to true in order to resolve yum repositories on remote instances.

--- a/aws/aws-ec2-networking.yaml
+++ b/aws/aws-ec2-networking.yaml
@@ -72,8 +72,8 @@ Resources:
     Type: "AWS::EC2::VPC"
     Properties:
       CidrBlock: "10.1.0.0/16"
-      EnableDnsHostnames: false
-      EnableDnsSupport: false
+      EnableDnsHostnames: true
+      EnableDnsSupport: true
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-vpc"
