Update aws-ec2-compute.yaml add output to export ecs cluster reference.

--- a/aws/aws-ec2-compute.yaml
+++ b/aws/aws-ec2-compute.yaml
@@ -281,3 +281,10 @@ Resources:
           IpProtocol: -1
       VpcId: !ImportValue
         Ref: VPCReference
+
+Outputs:
+  ECSClusterReference:
+    Description: ECS Cluster Reference
+    Value: !Ref ECSCluster
+    Export:
+      Name: !Sub "${AWS::StackName}-ecs-cluster"
